# yavuz

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SETUP_INSTRUCTIONS.md  launcher.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat  setup.sh  start.bash  start.bat  start.sh
demos/: DEMO_TEMPLATE.md  __init__.py
demos/algorithm_visualizer/: README.md  algorithm_visualizer.py
demos/convex_decomposition/: convex_decomposition.py
demos/convolution_signal/: README.md  convolution_signal.py
demos/cutter/: README.md  cutter.py
demos/douglas_peucker/: README.md  douglas_peucker.py
demos/line_offset/: line_offset.py
demos/mesh_booleans/: README.md  mesh_booleans.py
demos/numerical_methods/: README.md  numerical_methods.py
demos/parametric_3d/: README.md  parametric_3d.py
demos/strange_attractor/: README.md  strange_attractor.py
demos/surface_plot/: README.md  surface_plot_interactive.py
demos/tri_dexel/: REQUIREMENTS.md  tri_dexel.py
src/yavuz/: __init__.py  launcher.py
tests/: __init__.py  test_main.py
